<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="2, 3">

    <!-- Rows have different number of columns and content doesn't fit on
         screen: column 4 of row 2 shrinks all of the other columns -->
    <TableRow>
        <TextView
            android:text="@string/table_layout_3_star"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_open"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_open_shortcut"
            android:padding="3dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/table_layout_3_triple_star"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_save"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_save_shortcut"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_too_long"
            android:padding="3dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/table_layout_3_star"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_quit"
            android:padding="3dp" />
        <TextView
            android:text="@string/table_layout_3_quit_shortcut"
            android:padding="3dp" />
    </TableRow>
</TableLayout>
