<?xml version="1.0" encoding="utf-8"?>

<!-- A set of preferences used to exercise the DevicePolicyManager API. -->
<!-- This screen is shown for the "General" header. -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/enable_admin" >

        <CheckBoxPreference
            android:key="key_enable_admin"
            android:title="@string/enable_admin" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/device_capabilities_category" >

        <CheckBoxPreference
            android:key="key_disable_camera"
            android:title="@string/disable_camera" />

        <CheckBoxPreference
            android:key="key_disable_keyguard_widgets"
            android:title="@string/disable_keyguard_widgets" />

        <CheckBoxPreference
            android:key="key_disable_keyguard_secure_camera"
            android:title="@string/disable_keyguard_secure_camera" />

        <CheckBoxPreference
            android:key="key_disable_notifications"
            android:title="@string/disable_keyguard_notifications" />

        <CheckBoxPreference
            android:key="key_disable_unredacted"
            android:title="@string/disable_keyguard_unredacted_notifications" />

        <CheckBoxPreference
            android:key="key_disable_trust_agents"
            android:title="@string/disable_keyguard_trust_agents" />

    </PreferenceCategory>

</PreferenceScreen>
