<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_8_open"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_open_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_8_save"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_save_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/table_layout_8_save_as"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_save_as_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/table_layout_8_x"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_import"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/table_layout_8_x"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_export"
                android:padding="3dip" />
            <TextView
                android:text="@string/table_layout_8_export_shortcut"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_layout_8_toggle_stretch" />
</LinearLayout>
