<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_open"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/table_layout_9_open_shortcut"
                    android:gravity="right"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_save"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/table_layout_9_save_shortcut"
                    android:gravity="right"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_save_as"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/table_layout_9_save_as_shortcut"
                    android:gravity="right"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_save_all"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/table_layout_9_save_all_shortcut"
                    android:gravity="right"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_import"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/table_layout_9_export"
                    android:padding="3dp" />
                <TextView
                    android:text="@string/table_layout_9_export_shortcut"
                    android:gravity="right"
                    android:padding="3dp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_layout_9_toggle_shrink" />
    </LinearLayout>
</ScrollView>
